- added missing p24fj_ga_705.inc - added ../private folder to .gitignore - changed U2_RPO_REGISTER setting to ior instead of mov as not to remove the U1_RPO setting if it's   in the same RPO register.

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@
 /FF_UART_K42.X/dist/
 /pic18/FF_UART_K42_K83.X/build/
 /pic18/FF_UART_K42_K83.X/dist/
+/pic24/FF_24-30-33.X/build/
+/pic24/FF_24-30-33.X/dist/
+/pic24/FF_24-30-33.X/nbproject/private/
